Fix multiline code snippet text wrapping

--- a/src/styles/devtools.css
+++ b/src/styles/devtools.css
@@ -174,6 +174,7 @@ body {
   background-color: var(--toolbar-background-color);
   border: 1px solid var(--toolbar-border-color);
   padding: 4px 8px;
+  line-height: 2.5;
 }
 
 [data-theme="dark"] a {
